[package]
name = "roise"
version = "0.1.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23.1"
rand = "0.7.3"

[dev-dependencies]
image = "0.23.12"
imageproc = "0.22.0"
criterion = "0.3"

[[bench]]
name = "triangulation"
harness = false
debug = false

# [profile.bench]
# debug = true # for profiling